--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ ext {
     junitVersion = '4.13.1'
     espressoVersion = '3.1.0'
     androidxJunitVersion = '1.1.2'
+    fragment_version = "1.5.6"
 }
 
 task clean(type: Delete) {
