--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,13 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlinx-serialization'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
+
+    namespace "com.ligh"
 
     viewBinding {
         enabled = true
@@ -13,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.ligh"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -42,6 +45,8 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
 
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
+
     implementation "androidx.biometric:biometric:1.1.0"
 
     // Dependencies for working with Architecture components
@@ -50,6 +55,7 @@ dependencies {
     // Room components
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':datastore')
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
