--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlinx-serialization'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -39,11 +40,20 @@ android {
         }
         jvmTarget = '1.8'
     }
+
+}
+kapt {
+    correctErrorTypes true
 }
 
 dependencies {
+    def dagger_version = "2.44"
+
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
+
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
 
