--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.android.library' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.0'
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
 
 ext {
