--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,34 +54,23 @@ kapt {
 
 dependencies {
 
-    implementation 'com.bytedance.tools.lancet:lancet-plugin-asm9:1.0.1'
-
-
     implementation(project(":network"))
     implementation(project(":download"))
+    implementation project(path: ':datastore')
 
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
 
-    implementation 'com.google.android.material:material:1.5.0'
 
+    implementation "com.google.dagger:hilt-android:2.48"
+    kapt "com.google.dagger:hilt-compiler:2.48"
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
-
-    implementation "androidx.biometric:biometric:1.1.0"
-
-    // Dependencies for working with Architecture components
-    // You'll probably have to update the version numbers in build.gradle (Project)
 
     // Room components
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation project(path: ':datastore')
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
-    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
@@ -90,29 +79,28 @@ dependencies {
 
     // Kotlin components
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlin_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
 
     //fragment
     implementation "androidx.fragment:fragment-ktx:$rootProject.fragment_version"
 
 
-    //
-    implementation "com.bytedance.tools.codelocator:codelocator-core:2.0.3"
+//    //
+//    implementation "com.bytedance.tools.codelocator:codelocator-core:2.0.4"
+
+
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
+
+
+    implementation 'com.google.code.gson:gson:2.8.0'
+
+    implementation 'androidx.biometric:biometric:1.2.0-alpha04'
 
 
 
-    // UI
+//
+//    // UI
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
-
-    // Testing
-    testImplementation "junit:junit:$rootProject.junitVersion"
-    androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-    androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
-
-    testImplementation(project(":network"))
 }
