--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.0'
     id("com.google.dagger.hilt.android") version "2.44" apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.0' apply false
 }
 
 ext {
